--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta id="meta-description" name="description" content="Predict your future with tarot cards" />
+    <meta id="og-title" property="og:title" content="Shootingstarsgarden tarot" />
+    <meta name="google-site-verification" content="uHBHrEV-GwQGP8sVGK5rZ3cP4FFNr0J6Jks7LOJKVqg" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Predict your future with tarot cards"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sail&display=swap" rel="stylesheet"> 
-    <title>Task Tracker hello</title>
+    <title>Shooting stars garden tarot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
