--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <meta name="google-site-verification" content="uHBHrEV-GwQGP8sVGK5rZ3cP4FFNr0J6Jks7LOJKVqg" />
     <meta
       name="description"
-      content="Predict your future with tarot cards"
+      content="Discover what the future holds with our tarot card predictions. Our expert readers will provide you with accurate and insightful readings that will help you navigate life's challenges. Contact us now to book your reading."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sail&display=swap" rel="stylesheet"> 
-    <title>Shooting stars garden tarot</title>
+    <title>Get Accurate Tarot Card Predictions | Shooting stars garden tarot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
